# ABP-Synth

./: LICENSE  README.md  README_ZH.md  pyproject.toml
examples/: custom_doping_pattern.py  quickstart.py
src/abp_synth/: __init__.py  baseline.py  cli.py  synthesizer.py  visualization.py
src/abp_synth/data/: abps_data.csv
tests/: test_baseline.py  test_cli.py  test_synthesizer.py
